--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,10 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-node": "^9.0.1"
   }
 }
