--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
+    "react": "latest",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
@@ -29,10 +29,7 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
     "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.13.0"
   }
 }
