--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,13 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-node": "^9.0.1"
+    "eslint-plugin-node": "^9.1.0"
   }
 }
