--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
