--- a/server/package.json
+++ b/server/package.json
@@ -3,22 +3,31 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "server": "babel-node ./bin/www",
+    "dev": "NODE_ENV=development npm-run-all server"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.1",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
+    "npm-run-all": "^4.1.5",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-node": "^9.1.0"
+    "eslint-plugin-node": "^9.1.0",
+    "nodemon": "^1.19.1"
   }
 }
