--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "shortid": "^2.2.14",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
@@ -27,7 +29,6 @@
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-node": "^9.1.0",
-    "nodemon": "^1.19.1"
+    "eslint-plugin-node": "^9.1.0"
   }
 }
