--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
