--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
+    "express-rate-limit": "^4.0.3",
     "helmet": "^3.18.0",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
