--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
@@ -14,7 +15,7 @@
     "reactstrap": "^8.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +38,6 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
