--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "latest",
+    "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
