--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@types/react-dom": "^16.8.4",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "latest",
     "react-countdown-now": "^2.1.0",
